fixed the positoin of alert fixed the resizing on iphone when keyboard is triggered in the chat

--- a/public/app/css/style.css
+++ b/public/app/css/style.css
@@ -154,7 +154,7 @@
 	font-size: 13px;
 	position: relative;
 	margin: 0px auto;
-	top : -10px;
+	top : -400px;
 	z-index: 999;	 
 }
 .slideout_inner {
